--- a/index.html
+++ b/index.html
@@ -9,14 +9,81 @@
 <body>
     <header class="header">
         <div class="header__top">
-            <div>
-                <p>10A Класс / МБОУ СОШ №1</p>
+            <div class="header__left">
+                <p class="header__class">10A Класс / МБОУ СОШ №1</p>
             </div>
-            <div></div>
+            <div class="header__right">
+                <a href="">Войти</a>
+            </div>
         </div>
         <div class="header__bottom">
-            
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header__element">
+                        <a class="header__link active" href="">Ученик</a>
+                    </li>
+                    <li class="header__element">
+                        <a class="header__link" href="">Класс</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
+    <main>
+        <section class="main__block">
+            <div class="main__estimation">
+                <p class="main__estimation-title"><b>Мои оценки</b></p>
+                <ul class="main__list">
+                    <li>
+                        <p class="main__estimation-top">4</p>
+                        <p class="main__estimation-body" >Русская лит...</p>
+                        <p class="main__estimation-bottom">Сегодня</p>
+                    </li>
+                    <li>
+                        <p class="main__estimation-top">5</p>
+                        <p class="main__estimation-body">Русский язык</p>
+                        <p class="main__estimation-bottom">Сегодня</p>
+                    </li>
+                    <li>
+                        <p class="main__estimation-top">4</p>
+                        <p class="main__estimation-body">Алгебра</p>
+                        <p class="main__estimation-bottom">Сегодня</p>
+                    </li>
+                    <li>
+                        <p class="main__estimation-top">3</p>
+                        <p class="main__estimation-body">Информатика</p>
+                        <p class="main__estimation-bottom">Сегодня</p>
+                    </li>
+                </ul>
+                <!-- <div class="main__lessons">
+                    <ol class="main__list">
+                        <li>
+                            <div>
+                                <p>Математика</p>
+                                <p>5</p>
+                            </div>
+                        </li><hr>
+                        <li>Русский язык</li><hr>
+                        <li>История</li><hr>
+                        <li>Английский язык</li>
+                    </ol>
+                </div> -->
+                <div class="main__end">
+                    <button class="main__button">Посмотреть все оценки</button>
+                </div>
+            </div>
+            <div class="main__class">
+                <p>Класс</p>
+            </div>
+            <div class="main__third-block">
+                <div class="main__highscore">
+                    <p>Таблица лидеров</p>
+                </div>
+                <div class="main__middle-estimation">
+                    <p>Средний балл класса</p>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
