--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header class="header">
@@ -50,24 +51,9 @@
                         <p class="main__estimation-bottom">Сегодня</p>
                     </li>
                     <li>
-                        <p class="main__estimation-top">3</p>
-                        <p class="main__estimation-body">Информатика</p>
-                        <p class="main__estimation-bottom">Сегодня</p>
+                        <a href="" class="main__next"><i class="fa-solid fa-circle-arrow-right"></i></a>
                     </li>
                 </ul>
-                <!-- <div class="main__lessons">
-                    <ol class="main__list">
-                        <li>
-                            <div>
-                                <p>Математика</p>
-                                <p>5</p>
-                            </div>
-                        </li><hr>
-                        <li>Русский язык</li><hr>
-                        <li>История</li><hr>
-                        <li>Английский язык</li>
-                    </ol>
-                </div> -->
                 <div class="main__end">
                     <button class="main__button">Посмотреть все оценки</button>
                 </div>
