--- a/index.html
+++ b/index.html
@@ -65,14 +65,114 @@
                     <li class="main__class-el">
                         <div class="main__class-name"><p>Оюн Начын</p></div>
                         <div class="main__class-mid"><p>4.8</p></div>
-                        <hr class="main__class-hr">
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
+                    </li>
+                    <li class="main__class-el">
+                        <div class="main__class-name"><p>Оюн Начын</p></div>
+                        <div class="main__class-mid"><p>4.8</p></div>
                     </li>
                 </ul>
-                <button class="main__show-more">Показать больше</button>
+                <div class="main__show-more-div">
+                    <button class="main__show-more">Показать больше</button>
+                </div>
             </div>
             <div class="main__third-block">
                 <div class="main__highscore">
-                    <p class="main__highscore-title"><b>Таблица лидеров</b></p>
+                    <p class="main__highscore-title"><b>Таблица лидеров</b></p><hr>
+                    <ul class="main__highscore-list">
+                        <li class="main__highscore-el">
+                            <div>
+                                <i class="fa-solid fa-crown crown-gold"></i>
+                                <p class="main__highscore-name">Оюн Начын</p>
+                            </div>
+                            <p class="main__highscore-mid">4.8</p>
+                        </li>
+                        <li class="main__highscore-el">
+                            <div>
+                                <i class="fa-solid fa-crown crown-silver"></i>
+                                <p class="main__highscore-name">Оюн Начын</p>
+                            </div>
+                            <p class="main__highscore-mid">4.8</p>
+                        </li>
+                        <li class="main__highscore-el">
+                            <div>
+                                <i class="fa-solid fa-crown crown-bronze"></i>
+                                <p class="main__highscore-name">Оюн Начын</p>
+                            </div>
+                            <p class="main__highscore-mid">4.8</p>
+                        </li>
+                    </ul>
                 </div>
                 <div class="main__middle-estimation">
                     <p class="main__middle-title"><b>Средний балл класса</b></p>
