--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <nav class="header__nav">
                 <ul class="header__list">
                     <li class="header__element">
-                        <a class="header__link active" href="">Ученик</a>
+                        <a class="header__link active" href="">Главная</a>
                     </li>
                     <li class="header__element">
-                        <a class="header__link" href="">Класс</a>
+                        <a class="header__link" href="">Оценки</a>
                     </li>
                 </ul>
             </nav>
