--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
             <div class="header__left">
                 <p class="header__class">10A Класс / МБОУ СОШ №1</p>
             </div>
-            <div class="header__right">
-                <i class="fa-solid fa-arrow-right-to-bracket"></i>
-                <a href="">Войти</a>
+            <div class="header__right">       
+                <a href="http://127.0.0.1:5500/login.html"><i class="fa-solid fa-arrow-right-to-bracket"></i>Войти</a>
             </div>
         </div>
         <div class="header__bottom">
