--- a/login.html
+++ b/login.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <div>
-        
+    <div class="main">
+        <div class="main__block">
+            <p class="main__title">10A Класс / МБОУ СОШ №1</p>
+            <div class="main__inp">
+                <label class="main__desc" for="">Вход в дневник</label>
+                <div>
+                    <i class="fa-solid fa-user"></i>
+                    <input type="text" name="" id="name-input" placeholder="Логин">
+                </div>
+                <div>
+                    <i class="fa-solid fa-lock"></i>
+                    <input type="password" name="" id="password-input" placeholder="Пароль">
+                </div>
+                <button class="main__button">Войти</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
