--- a/login.html
+++ b/login.html
@@ -9,10 +9,11 @@
 </head>
 <body>
     <div class="main">
+        <a href="http://127.0.0.1:5500/index.html" class="back-button"><i class="fa-solid fa-chevron-left"></i>Главная страница</a>
         <div class="main__block">
             <p class="main__title">10A Класс / МБОУ СОШ №1</p>
             <div class="main__inp">
-                <label class="main__desc" for="">Вход в дневник</label>
+                <!-- <label class="main__desc" for="">Вход в дневник</label>
                 <div>
                     <i class="fa-solid fa-user"></i>
                     <input type="text" name="" id="name-input" placeholder="Логин">
@@ -21,8 +22,16 @@
                     <i class="fa-solid fa-lock"></i>
                     <input type="password" name="" id="password-input" placeholder="Пароль">
                 </div>
-                <button class="main__button">Войти</button>
+                <button class="main__button">Войти</button> -->
             </div>
+            <form method="post" id="form">
+                <label class="form__title">Вход в дневник</label><br>
+                <label for="login"><i class="fa-solid fa-user"></i></label>
+                <input type="text" id="login" name="login" required placeholder="Логин"><br>
+                <label for="password"><i class="fa-solid fa-lock"></i></label>
+                <input type="password" id="password" name="password" required placeholder="Пароль"><br>
+                <button type="submit" id="button">Войти</button>
+            </form>
         </div>
     </div>
 </body>
